# python-flickr-apollo-archive

./: .gitignore  .travis.yml  README.rst  apolloarchive.ipynb  setup.cfg  setup.py  tox.ini
apolloarchive/: .env.example  __init__.py  cli.py  download.py  env.py  flickr.py  vars.py
tests/: test_cli.py  test_env.py  test_flickr.py
