[metadata]
name = apollo-archive
author = Benoit Seignovert
author-email = benoit.a.seignovert@jpl.nasa.gov
summary = Python package to list and download all original images from Flickr Apollo Archive
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/seignovert/python-flickr-apollo-archive
license = MIT
keywords = flickr, nasa, apollo, api, image
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy

[files]
packages =
    apolloarchive

[wheel]
universal = 1

[coverage:report]
exclude_lines =
    def __repr__

[entry_points]
console_scripts =
    apollo-archive = apolloarchive.cli:cli_sync